# blackhole-simulation

./: .gitignore  PRIVACY.md  README.md
apple/: README.md  project.yml
apple/BlackHole/: AboutSheet.swift  BlackHoleParameters.swift  ContentView.swift  ControlPanel.swift  HUDView.swift  MetalView.swift  PaywallSheet.swift  PomodoroTimer.swift  PomodoroView.swift  QualityPreset.swift  Scenarios.swift  SubscriptionManager.swift
apple/BlackHole-iOS/: Info.plist  LaunchScreen.storyboard  WallpaperSaver.swift  iOSApp.swift
apple/BlackHole-macOS/: AppController.swift  BlackHole-macOS.entitlements  Info.plist  MenuBarContent.swift  PaywallSheet.swift  SubscriptionManager.swift  WallpaperManager.swift  WallpaperOverlay.swift  macOSApp.swift
apple/BlackHole-macOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/BlackHole-visionOS/: ImmersiveRenderer.swift  ImmersiveScene.metal  Info.plist  VisionControlsView.swift  visionOSApp.swift
apple/BlackHole-visionOS/Assets.xcassets/AppIcon.solidimagestack/: Contents.json
apple/BlackHole.xcodeproj/: project.pbxproj
apple/BlackHole/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/BlackHole/Bridge/: Gravitas.swift
apple/BlackHole/Renderer/: BlackHole.metal  Postprocess.metal  Renderer.swift  Shaders.metal
apple/BlackHole/Shared/: BlackHole-Bridging-Header.h  ShaderTypes.h
apple/scripts/: build-gravitas-xcframework.sh
physics-engine/: Cargo.toml
physics-engine/gravitas-ffi/: Cargo.toml  cbindgen.toml
physics-engine/gravitas-ffi/include/: gravitas.h
physics-engine/gravitas-ffi/src/: lib.rs
(+2 files in other folders)
